Some fixes to buttons color and spacing

--- a/RPInventarios/wwwroot/css/site.css
+++ b/RPInventarios/wwwroot/css/site.css
@@ -44,6 +44,11 @@ body {
 .github-dark-gray {
     background-color: #181c24 !important;
 }
+.github-dark-gray2 {
+    background-color: #212830 !important;
+}
+
+
 
 .github-dark1 {
     background-color: #08040c !important;
